--- a/.gitignore
+++ b/.gitignore
@@ -65,4 +65,5 @@ external/glfwlib
 !task08/bunny_1k.obj
 !task08-houdini/bunny_1k.obj
 !task09/bunny_1k.obj
+!task09-houdini/bunny_1k.obj
 !task10/t-rex.obj
